fix spacing in gallery

--- a/wp-content/themes/citystudio/sass/_partners-page.scss
+++ b/wp-content/themes/citystudio/sass/_partners-page.scss
@@ -153,6 +153,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  width: 100%;
 
   li {
     flex: 0 0 30%;
